--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "jest": true
   },
   "extends": ["airbnb-base", "plugin:prettier/recommended"],
   "parser": "@typescript-eslint/parser",
@@ -11,6 +12,8 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
+    "no-restricted-syntax": "off",
+    "import/prefer-default-export": "off",
     "no-unused-vars": "off",
     "import/extensions": [
       "error",
