--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node_modules/.bin/ts-node src/main"
+    "start": "node_modules/.bin/ts-node src/main",
+    "test": "NODE_ENV=test node_modules/.bin/jest --bail --runInBand --setupFiles --forceExit --detectOpenHandles --testTimeout=10000",
+    "test:watch": "NODE_ENV=test node_modules/.bin/jest --watchAll --bail --runInBand --setupFiles --forceExit --detectOpenHandles --testTimeout=10000"
   },
   "devDependencies": {
+    "@types/invariant": "^2.2.34",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.11.2",
     "@types/ramda": "^0.27.24",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
@@ -17,11 +21,14 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2",
+    "ts-jest": "^26.5.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "invariant": "^2.2.4",
     "ramda": "^0.27.1"
   }
 }
